//bugs.freedesktop.org/show_bug.cgi?id=1220) attachment #980     (https://bugs.freedesktop.org/attachment.cgi?id=980): Fix garbage     screen on radeon cards which may appear after a system suspend/resume     cycle. Patch by Matthias Hopf <mhopf@suse.de>